# cmake_proj

./: .clang-format  .gitignore  CMakeLists.txt  CppCheckSuppressions.txt  LICENSE  README.md  TODOs  TODOs.txt  basics_run.sh  cmake_proj.md  configurerun_clang_static_analyzer.sh  iwyu.imp
cmake/: catch.cmake  clang_format.cmake  clang_tidy.cmake  iwyu.cmake  target_factory.cmake  target_factory_utest.cmake
factories/: README.md  executable_and_lib.cmake  executeable_and_lib.cmake  utest.cmake
factories/helpers/: set_common_target_stuff.cmake  strip_symbols.cmake
factories/settings/: flags.cmake  strip_symbols.cmake
src/: CMakeLists.txt  README.md
src/app1/: CMakeLists.txt  main.cpp
src/app1/utils/: utils.cpp  utils.hpp
src/app2/: CMakeLists.txt  main.cpp
src/app2/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/app2/utils/priv/: priv.hpp
src/day1/: CMakeLists.txt  inputTest14  inputTest5  main.cpp  manager.cpp  manager.hpp  txtfile.cpp  txtfile.hpp
src/day2/: CMakeLists.txt  input.hpp  main.cpp  manager.cpp  manager.hpp  test.cpp
src/day3/: CMakeLists.txt  claim.cpp  claim.hpp  claimUtils.cpp  claimUtils.hpp  fabric.cpp  fabric.hpp  main.cpp  manager.cpp  manager.hpp
src/day4/: CMakeLists.txt  decoder.cpp  decoder.hpp  inputTestUnordered  logs.cpp  logs.hpp  manager.cpp  manager.hpp
src/day5/: CMakeLists.txt  input.hpp  main.cpp  mainTest.cpp  manager.cpp  manager.hpp  polymer.cpp  polymer.hpp  test.cpp  test2.cpp
testsOfFramework/: CMakeLists.txt  README.md  main.cpp  test_base.cpp  test_base.hpp
testsOfFramework/asan/: CMakeLists.txt  asan.cpp  asan.hpp
testsOfFramework/libstdcxx_check/: CMakeLists.txt  app1.cpp  app2.cpp  libcxx_debug.cpp  libcxx_debug.hpp
testsOfFramework/tsan/: CMakeLists.txt  tsan.cpp  tsan.hpp
testsOfFramework/ubsan/: CMakeLists.txt  app1.cpp  ubsan.cpp  ubsan.hpp
